# N-Body-Code

./: CMakeLists.txt  LICENSE  README.md
include/: kernel.h  nbody.h  nbody_tt_integration.h  utils.h
kernels/: mesh_compute.cpp  mesh_read.cpp  mesh_write.cpp  nb_compute.cpp  nb_read.cpp  nb_write.cpp
src/: kernel.cpp  main.cpp  nbody.cpp  utils.cpp
yamls/: 1_wh_mesh_graph_descriptor.yaml  1_wh_rank_bindings.yaml  2_wh_mesh_graph_descriptor.yaml  2_wh_rank_bindings.yaml  4_wh_mesh_graph_descriptor.yaml  4_wh_rank_bindings.yaml
